# transferit-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  publish.yml
docs/: REVERSE_ENGINEERING.md
tests/: conftest.py  test_chunking.py  test_crypto.py  test_errors.py  test_models.py  test_parsing.py  test_roundtrip.py
transferit/: __init__.py  _api.py  _client.py  _crypto.py  _download.py  _models.py  _transfer.py  _upload.py
transferit/_actions/: __init__.py  _download.py  _info.py  _metadata.py  _upload.py
transferit_cli/: __init__.py  _common.py  _download.py  _info.py  _metadata.py  _upload.py
